fixed horizontal scroll issue

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -263,7 +263,7 @@
                     transform: translateY(0);
          }
 
-     // Portfolio
+// Portfolio
 
 .portfolio{
     margin-top: 6rem;
@@ -282,13 +282,13 @@
     }
     .project-card{
         margin-top: 1rem;
-        // overflow: hidden;
+        overflow: hidden;
         display: block;
         grid-gap: 0rem;
 
         .image {
             margin-bottom: 1rem;
-            // overflow: hidden;
+            overflow: hidden;
             padding-top: -2rem;
             h5 {
                 margin-top:-4rem;
@@ -306,7 +306,7 @@
         }
         .details {
             margin-top: 1rem;
-            // overflow: hidden;
+            overflow: hidden;
             padding: 1rem;
             // height
 
@@ -331,12 +331,13 @@
                 }
      } 
      
+    
+   
+    // BLog
      .blog-section{
          margin-top: .1rem;
      }
 
-   
-    // BLog
     .blog-section .blog-card {
         margin-bottom:10px;
         
@@ -399,7 +400,7 @@
 
 }
 
-@media screen and (max-width: 515px){
+@media screen and (max-width: 500px){
     .home .banner {
          h1 {
             font-size: 2.8rem;
@@ -469,26 +470,103 @@
     }
 
     .section{
-    padding:40px 5px 0px 5px;
-    &-title{
-        position: relative;
-        padding-left:15px;
-        z-index: 1;
-        &:after{
-            @include after(0px,-20px,60px,60px);
-            background-color:$light-b-color;
-            border-radius: $rd-circle;
-            z-index: -1;
+        margin-top: 2rem;
+        padding:20px 5px 0px 5px;
+
+        &-title{
+            position: relative;
+            padding-left:15px;
+            z-index: 1;
+            &:after{
+                @include after(0px,-20px,60px,60px);
+                background-color:$light-b-color;
+                border-radius: $rd-circle;
+                z-index: -1;
+            }
+            h2{
+                text-transform:capitalize;
+                font-weight: $f-w-700;
+                margin-bottom: -2rem;
+            }
+            p{
+                text-transform: capitalize;
+            }
         }
-        h2{
-            text-transform:capitalize;
-            font-weight: $f-w-700;
+}
+
+// Portfolio
+
+.portfolio{
+    margin-top: 6rem;
+    padding-top: 70px;
+       
+	padding: 0;
+
+    .section-title p {
+		margin-top: .6rem;
+		margin-bottom: 1rem;
+	}
+
+}
+    .projects {
+        padding-top: 2rem;
+    }
+    .project-card{
+        margin-top: 1rem;
+        // overflow: hidden;
+        display: block;
+        grid-gap: 0rem;
+
+        .image {
+            margin-bottom: 1rem;
+            // overflow: hidden;
+            padding-top: -2rem;
+            h5 {
+                margin-top:-4rem;
+                margin-bottom:1rem;
+            }
+
+            .chat-box-h5 {
+                margin-top:-1.5rem;
+                margin-bottom: 1rem;
+            }            
         }
-        p{
-            text-transform: capitalize;
+
+        .image-chatbox {
+            margin-bottom: 12rem;
+        }
+        .details {
+            margin-top: 1rem;
+            // overflow: hidden;
+            padding: 1rem;
+            // height
+
         }
     }
-}
+
+     @-moz-document url-prefix() {
+                .project-card{
+  
+                    .image {
+                        margin-bottom: 2rem;
+                    }
+                    .image-chatbox {
+                        margin-bottom: 4rem;
+                    }
+                    .details {
+                        margin-top: 2rem;
+                        overflow: hidden;
+                        padding: 1rem;
+
+                    }
+                }
+     } 
+
+     // Blog
+    .blog-section{
+         margin-top: .1rem;
+     }
+
 
     
 }
